--- a/.github/workflows/lambda_update.yml
+++ b/.github/workflows/lambda_update.yml
@@ -14,7 +14,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: install AWS CLI
-        run: sudo apt-get install -y awscli
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+          aws --version  # Verify installation
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
