--- a/.github/workflows/lambda_update.yml
+++ b/.github/workflows/lambda_update.yml
@@ -31,7 +31,7 @@ jobs:
         run: ls -R  # This will show the directory structure
 
       - name: Zip Lambda Code
-        run: zip -r lambda_function.zip ./Cloud_Resume/lambda/lambda_function.py -x '*.git*'
+        run: zip -r lambda_function.zip lambda/lambda_function.py -x '*.git*'
 
       - name: Upload to AWS Lambda
         run: aws lambda update-function-code --function-name updateVisitorCount --zip-file fileb://lambda_function.zip --debug
