--- a/.github/workflows/lambda_update.yml
+++ b/.github/workflows/lambda_update.yml
@@ -30,7 +30,7 @@ jobs:
           aws-region: us-east-1
 
       - name: List files to check directory structure
-        run: ls -R  # This will show the directory structures
+        run: ls -R  # This will show the directory structure
 
       - name: Zip Lambda Code
         run: zip lambda_function.zip lambda/lambda_function.py 
